adding html & styles

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -7,15 +7,14 @@
       content="width=device-width , initial-scale=1 ,
     viewport-fit= cover"
     />
-
+    <link rel="stylesheet" href="Portfolio.css">
     <title>Danilo Kulisic</title>
   </head>
   <body>
-    <div class="div-first">
-      <svg id="svg">
-        <g class="D"></g>
-        <g class="K"></g>
-      </svg>
+      <div class="div-letters">
+        <text class="d">D</text>
+        <text class="k">K</text>
+      </div>
       <nav id="navtop">
         <ul class="ul-top">
           <li class="about">ABOUT</li>
@@ -23,13 +22,12 @@
           <li class="contact">CONTACT</li>
         </ul>
       </nav>
-    </div>
     <nav id="navside">
       <ul class="ul-side">
-        <li class="github"></li>
-        <li class="twitter"></li>
-        <li class="linkedin"></li>
-        <li class="email"></li>
+        <li class="github">GITHUB</li>
+        <li class="twitter">TWITTER</li>
+        <li class="linkedin">LINKEDIN</li>
+        <li class="email">EMAIL</li>
       </ul>
     </nav>
     <main>
