--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,6 +8,7 @@
     viewport-fit= cover"
     />
     <link rel="stylesheet" href="Portfolio.css">
+    <script src="https://kit.fontawesome.com/c144e9175f.js" crossorigin="anonymous"></script>
     <title>Danilo Kulisic</title>
   </head>
   <body>
@@ -17,23 +18,29 @@
       </div>
       <nav id="navtop">
         <ul class="ul-top">
-          <li class="about">ABOUT</li>
-          <li class="projects">PROJECTS</li>
-          <li class="contact">CONTACT</li>
+          <li class="about"><a class="a-about">ABOUT</a></li>
+          <li class="projects"><a class="a-projects">PROJECTS</a></li>
+          <li class="contact"><a class="a-contact">CONTACT</a></li>
         </ul>
       </nav>
     <nav id="navside">
       <ul class="ul-side">
-        <li class="github">GITHUB</li>
-        <li class="twitter">TWITTER</li>
-        <li class="linkedin">LINKEDIN</li>
-        <li class="email">EMAIL</li>
+        <li class="github"><i class="fa-brands fa-github"></i></li>
+        <li class="twitter"><i class="fa-brands fa-twitter"></i></li>
+        <li class="linkedin"><i class="fa-brands fa-linkedin"></i></li>
+        <li class="email"><i class="fa-solid fa-square-envelope"></i></li>
       </ul>
     </nav>
     <main>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="section1">
+        <h1>ABOUT</h1>
+      </section>
+      <section class="section2">
+        <h1>PROJECTS</h1>
+      </section>
+      <section class="section3">
+        <h1>CONTACT</h1>
+      </section>
     </main>
   </body>
 </html>
