--- a/Portfolio.html
+++ b/Portfolio.html
@@ -7,22 +7,26 @@
       content="width=device-width , initial-scale=1 ,
     viewport-fit= cover"
     />
-    <link rel="stylesheet" href="Portfolio.css">
-    <script src="https://kit.fontawesome.com/c144e9175f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="Portfolio.css" />
+    <script
+      src="https://kit.fontawesome.com/c144e9175f.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Danilo Kulisic</title>
   </head>
   <body>
-      <div class="div-letters">
-        <text class="d">D</text>
-        <text class="k">K</text>
-      </div>
-      <nav id="navtop">
-        <ul class="ul-top">
-          <li class="about"><a class="a-about">ABOUT</a></li>
-          <li class="projects"><a class="a-projects">PROJECTS</a></li>
-          <li class="contact"><a class="a-contact">CONTACT</a></li>
-        </ul>
-      </nav>
+    <div class="div-letters">
+      <text class="d">D</text>
+      <text class="k">K</text>
+    </div>
+    <nav id="navtop">
+      <text class="nav-text"
+        >sdsd<a id="anchor" class="front"
+        >FRONT</a>jsdkasjhdkjsadhskjsdkksmskskkssdsdsjd<a id="anchor" class="developer">DEVELOPER</a>jsdkddi
+        ksdfhksjdfhksjdhjfsdasdashssl<a id="anchor" class="end">END</a>ksldkfjlskdfjlksdjflksalksdjlaksdjlj
+        o<a id="anchor" class="DANILO">DANILO</a>alksdjlasjsldjhvifsjdhsdhfksjpaodjhhdwefgqsislkdfnk<a id="anchor" class="kulisic">KULISIC</a>i
+        skdqwopjfjf<a id="anchor" class="pragmatic">PRAGMATIC</a>skhdfksdjfskdfhsdfsasd<a id="anchor" class="programmer">PROGRAMMER</a>kjsqgfjtewl</text>
+    </nav>
     <nav id="navside">
       <ul class="ul-side">
         <li class="github"><i class="fa-brands fa-github"></i></li>
@@ -31,16 +35,15 @@
         <li class="email"><i class="fa-solid fa-square-envelope"></i></li>
       </ul>
     </nav>
-    <main>
-      <section class="section1">
-        <h1>ABOUT</h1>
-      </section>
-      <section class="section2">
-        <h1>PROJECTS</h1>
-      </section>
-      <section class="section3">
-        <h1>CONTACT</h1>
-      </section>
-    </main>
+
+    <section class="section1">
+      <h1>ABOUT</h1>
+    </section>
+    <section class="section2">
+      <h1>PROJECTS</h1>
+    </section>
+    <section class="section3">
+      <h1>CONTACT</h1>
+    </section>
   </body>
 </html>
