--- a/Portfolio.html
+++ b/Portfolio.html
@@ -35,8 +35,13 @@
         <li class="email"><i class="fa-solid fa-square-envelope"></i></li>
       </ul>
     </nav>
-
-    <section class="section1">
+    <div class="menu">
+      <div id="menu" class="about"></div>
+      <div id="menu" class="projects"></div>
+      <div id="menu" class="contact"></div>
+    </div>
+    <section></section>
+    <!--<section class="section1">
       <h1>ABOUT</h1>
     </section>
     <section class="section2">
@@ -44,6 +49,6 @@
     </section>
     <section class="section3">
       <h1>CONTACT</h1>
-    </section>
+    </section>-->
   </body>
 </html>
