--- a/Portfolio.html
+++ b/Portfolio.html
@@ -25,7 +25,7 @@
         >FRONT</a>jsdkasjhdkjsadhskjsdkksmskskkssdsdsjd<a id="anchor" class="developer">DEVELOPER</a>jsdkddi
         ksdfhksjdfhksjdhjfsdasdashssl<a id="anchor" class="end">END</a>ksldkfjlskdfjlksdjflksalksdjlaksdjlj
         o<a id="anchor" class="DANILO">DANILO</a>alksdjlasjsldjhvifsjdhsdhfksjpaodjhhdwefgqsislkdfnk<a id="anchor" class="kulisic">KULISIC</a>i
-        skdqwopjfjf<a id="anchor" class="pragmatic">SOFTWARE</a>skhdfksdjfskdfhsdfsasd<a id="anchor" class="programmer">ENGINEER</a>kjsqgfjtewl</text>
+        skdqwopjfjf<a id="anchor" class="pragmatic">SOFTWARE</a>skhdfksdjfskdfhsdfsasd<a id="anchor" class="programmer">ENGINEER</a>kjsqgfjtsdadewl</text>
     </nav>
     <nav id="navside">
       <ul class="ul-side">
