adding styles and html

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -41,7 +41,7 @@
       <div id="menu" class="contact"></div>
     </div>
     <section></section>
-    <!--<section class="section1">
+    <section class="section1">
       <h1>ABOUT</h1>
     </section>
     <section class="section2">
@@ -49,6 +49,6 @@
     </section>
     <section class="section3">
       <h1>CONTACT</h1>
-    </section>-->
+    </section>
   </body>
 </html>
