new html styles

--- a/about.html
+++ b/about.html
@@ -7,6 +7,13 @@
       content="width=device-width , initial-scale=1 ,
     viewport-fit= cover"
     />
+    <link rel="stylesheet" href="menustyles.css" />
+    <title>About</title>
   </head>
-  <section></section>
+  <body>
+    <section>
+      <h1 id="head"><div class="header">ABOUT</div></h1>
+      <text></text>
+    </section>
+  </body>
 </html>
