--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,11 @@
       content="width=device-width , initial-scale=1 ,
     viewport-fit= cover"
     />
+    <link rel="stylesheet" href="menustyles.css" />
+    <title>Projects</title>
   </head>
-  <section></section>
+  <section>
+    <h1 id="head"><div class="header">PROJECTS</div></h1>
+    <text></text>
+  </section>
 </html>
