adding styles and html

--- a/about.html
+++ b/about.html
@@ -15,5 +15,6 @@
       <h1 id="head"><div class="header">ABOUT</div></h1>
       <text></text>
     </section>
+    <div class="text-div"><p></p></div>
   </body>
 </html>
