--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="menustyles.css" />
     <title>Projects</title>
   </head>
+  <body>
   <section>
     <h1 id="head"><div class="header">PROJECTS</div></h1>
     <text></text>
   </section>
+  <div class="text-div"><p></p></div>
+  </body>
 </html>
