adding styles and html

--- a/about.html
+++ b/about.html
@@ -13,9 +13,8 @@
   <body>
     <section>
       <h1 id="head"><div class="header">ABOUT</div></h1>
-      <text></text>
     </section>
-    <div class="text-div"><p></p></div>
-    <div class="img-div"><img></div>
+    <div class="text-div"><p>Hello! My name is Danilo Kulisic and I am on my path to becoming a Frontend Developer! This is my portfolio website, so you can check what skilss I have. I am currently learning Javascript. Go to the main page to check out my social network links!</p></div>
+    <div class="img-div"><img src="D:\Korisnik D disk\Desktop\Portfolio\Danilo Kulisic.jpg"></div>
   </body>
 </html>
