--- a/Portfolio.html
+++ b/Portfolio.html
@@ -86,7 +86,7 @@
         have cloned an Apple Page website, and you can check it in the Projects
         section. This is my portfolio website, so you can check what skils I
         have. Feel free to check out the links on the right side of the page!
-        Those are the links that will lead you to my social networks and GitHub!
+        Those are the links that will lead you to my social networks and GitHub.
       </p>
 
       <img
