--- a/Portfolio.html
+++ b/Portfolio.html
@@ -70,6 +70,11 @@
       </ul>
     </nav>
     <div class="float">
+      <div class="div-span">
+        <span class="span-about">About</span>
+        <span class="projects-about">Projects</span>
+        <span class="contact-about">Contact</span>
+      </div>
       <div class="menu">
         <div id="menu" class="about"></div>
         <div id="menu" class="projects"></div>
