adding new navbar

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -69,7 +69,16 @@
         </li>
       </ul>
     </nav>
-    <div class="float">
+
+    <nav class="nav-left">
+      <ul class="ul-left">
+        <li class="about-li"><text class="burger">ABOUT</text></li>
+        <li class="projects-li"><text class="burger">PROJECTS</text></li>
+        <li class="contact-li"><text class="burger">CONTACT</text></li>
+      </ul>
+    </nav>
+
+   <!-- <div class="float">
       <div class="div-span">
         <span class="span-about">About</span>
         <span class="projects-about">Projects</span>
@@ -80,9 +89,9 @@
         <div id="menu" class="projects"></div>
         <div id="menu" class="contact"></div>
       </div>
-    </div>
-    <section></section>
-    <section class="section1">
+    </div> -->
+    
+    <section class="section1" id="section--1">
       <h1>ABOUT</h1>
       <p class="p-about">
         Hello everyone! My name is Danilo Kulisic and I am on my path to
@@ -99,7 +108,7 @@
         src="D:\Korisnik D disk\Desktop\Portfolio\Danilo Kulisic.jpg"
       />
     </section>
-    <section class="section2">
+    <section class="section2" id="section--2">
       <h1>PROJECTS</h1>
       <p class="apple-text">
         Welcome to my first project ever! I was learning about HTML and CSS for
@@ -121,7 +130,7 @@
         src="D:\Korisnik D disk\Desktop\Portfolio\Apple clone page GIF.gif"
       />
     </section>
-    <section class="section3">
+    <section class="section3" id="section--3">
       <h1>CONTACT</h1>
       <form action="submit-form.php" method="post">
         <div class="form-group">
