--- a/Portfolio.html
+++ b/Portfolio.html
@@ -72,9 +72,9 @@
 
     <nav class="nav-left">
       <ul class="ul-left">
-        <li class="about-li"><text class="burger">ABOUT</text></li>
-        <li class="projects-li"><text class="burger">PROJECTS</text></li>
-        <li class="contact-li"><text class="burger">CONTACT</text></li>
+        <li class="about-li"><text class="left-menu">ABOUT</text></li>
+        <li class="projects-li"><text class="left-menu">PROJECTS</text></li>
+        <li class="contact-li"><text class="left-menu">CONTACT</text></li>
       </ul>
     </nav>
 
