--- a/Portfolio.html
+++ b/Portfolio.html
@@ -15,6 +15,7 @@
     <title>Danilo Kulisic</title>
   </head>
   <body>
+    <div class="non-transp"></div>
     <div class="div-letters">
       <text class="d">D</text>
       <text class="k">K</text>
