--- a/Portfolio.html
+++ b/Portfolio.html
@@ -73,9 +73,9 @@
 
     <nav class="nav-left">
       <ul class="ul-left">
-        <li class="about-li"><header class="left-menu">ABOUT</header></li>
-        <li class="projects-li"><header class="left-menu">PROJECTS</header></li>
-        <li class="contact-li"><header class="left-menu">CONTACT</header></li>
+       <a href="#anchor-ab"> <li class="about-li"><header class="left-menu">ABOUT</header></li></a>
+        <a href="#anchor-proj"><li class="projects-li"><header class="left-menu">PROJECTS</header></li></a>
+        <a href="#anchor-cont"><li class="contact-li"><header class="left-menu">CONTACT</header></li></a>
       </ul>
     </nav>
 
@@ -92,7 +92,7 @@
       </div>
     </div> -->
 
-    <section class="section1">
+    <section class="section1" id="anchor-ab">
       <h1>ABOUT</h1>
       <p class="p-about">
         Hello everyone! My name is Danilo Kulisic and I am on my path to
@@ -109,7 +109,7 @@
         src="D:\Korisnik D disk\Desktop\Portfolio\Danilo Kulisic.jpg"
       />
     </section>
-    <section class="section2">
+    <section class="section2" id="anchor-proj">
       <h1>PROJECTS</h1>
       <p class="apple-text">
         Welcome to my first project ever! I was learning about HTML and CSS for
@@ -131,7 +131,7 @@
         src="D:\Korisnik D disk\Desktop\Portfolio\Apple clone page GIF.gif"
       />
     </section>
-    <section class="section3">
+    <section class="section3" id="anchor-cont">
       <h1>CONTACT</h1>
       <form action="submit-form.php" method="post">
         <div class="form-group">
