--- a/Portfolio.html
+++ b/Portfolio.html
@@ -63,9 +63,9 @@
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </li>
-        <li class="email">
-          <a id="social" class="anchor-email" href="danilokulisic@gmail.com"
-            ><i class="fa-solid fa-square-envelope"></i
+        <li class="youtube">
+          <a id="social" class="anchor-youtube" href="https://www.youtube.com/@danilokulisic"
+            ><i class="fa-brands fa-youtube"></i
           ></a>
         </li>
       </ul>
@@ -73,9 +73,9 @@
 
     <nav class="nav-left">
       <ul class="ul-left">
-       <a href="#anchor-ab"> <li class="about-li"><header class="left-menu">ABOUT</header></li></a>
-        <a href="#anchor-proj"><li class="projects-li"><header class="left-menu">PROJECTS</header></li></a>
-        <a href="#anchor-cont"><li class="contact-li"><header class="left-menu">CONTACT</header></li></a>
+       <a class="anchor-ab" href="#anchor-ab"> <li class="about-li"><header class="left-menu">ABOUT</header></li></a>
+        <a class="anchor-proj" href="#anchor-proj"><li class="projects-li"><header class="left-menu">PROJECTS</header></li></a>
+        <a class="anchor-cont" href="#anchor-cont"><li class="contact-li"><header class="left-menu">CONTACT</header></li></a>
       </ul>
     </nav>
 
