adding react like-button

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -64,7 +64,10 @@
           ></a>
         </li>
         <li class="youtube">
-          <a id="social" class="anchor-youtube" href="https://www.youtube.com/@danilokulisic"
+          <a
+            id="social"
+            class="anchor-youtube"
+            href="https://www.youtube.com/@danilokulisic"
             ><i class="fa-brands fa-youtube"></i
           ></a>
         </li>
@@ -73,9 +76,19 @@
 
     <nav class="nav-left">
       <ul class="ul-left">
-       <a class="anchor-ab" href="#anchor-ab"> <li class="about-li"><header class="left-menu">ABOUT</header></li></a>
-        <a class="anchor-proj" href="#anchor-proj"><li class="projects-li"><header class="left-menu">PROJECTS</header></li></a>
-        <a class="anchor-cont" href="#anchor-cont"><li class="contact-li"><header class="left-menu">CONTACT</header></li></a>
+        <a class="anchor-ab" href="#anchor-ab">
+          <li class="about-li"><header class="left-menu">ABOUT</header></li></a
+        >
+        <a class="anchor-proj" href="#anchor-proj"
+          ><li class="projects-li">
+            <header class="left-menu">PROJECTS</header>
+          </li></a
+        >
+        <a class="anchor-cont" href="#anchor-cont"
+          ><li class="contact-li">
+            <header class="left-menu">CONTACT</header>
+          </li></a
+        >
       </ul>
     </nav>
 
@@ -130,6 +143,7 @@
         class="apple-vid"
         src="D:\Korisnik D disk\Desktop\Portfolio\Apple clone page GIF.gif"
       />
+      <div id="like-button-root"></div>
     </section>
     <section class="section3" id="anchor-cont">
       <h1>CONTACT</h1>
@@ -181,5 +195,14 @@
         <input type="submit" class="btn btn-primary" value="Submit" />
       </form>
     </section>
+    <script
+      src="https://unpkg.com/react@18/umd/react.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+      crossorigin
+    ></script>
+    <script src="like-button.js"></script>
   </body>
 </html>
